[project]
name = "nomadcoder-ai-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=2.23.0",
    "openai-agents>=0.10.3",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
    "watchdog>=6.0.0",
]
